appwrite bug is fixed and working

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Nora",
-    "scheme":"Nora",
+    "scheme": "Nora",
     "slug": "Nora",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -28,7 +28,8 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ]
   }
 }
